@@ -2,6 +2,14 @@
 cqsh - ChangeLog
 ===============================================================================
 
+* 2005-09-20
+	* Added command line option --uri or -n to specify a full uri for a single
+	  document being loaded
+	* Also added --uri or -n to the load command within the shell
+	* Fixed bug in ls command which split XPath statements on whitespace. It is
+	  now possible to run "ls /* except(/root1, /root2)" which will list uri's 
+	  that do not match the specified root nodes.
+
 * 2005-08-29
 	* Added command line option --load or -l to load files from command line.
 	* Added command line option --uriprefix or -i which specifies a uri prefix
